--- a/AutoMall/ViewControllers/PersonalCenter/EmployeeEditSkillCertificationVC.xib
+++ b/AutoMall/ViewControllers/PersonalCenter/EmployeeEditSkillCertificationVC.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -95,7 +95,7 @@
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <imageView clipsSubviews="YES" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="woS-Rp-xld" customClass="WPImageView">
-                                    <rect key="frame" x="54" y="97" width="267" height="150"/>
+                                    <rect key="frame" x="54" y="99.5" width="267" height="150"/>
                                     <color key="backgroundColor" red="0.84705882349999995" green="0.84705882349999995" blue="0.85882352939999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <constraints>
                                         <constraint firstAttribute="width" secondItem="woS-Rp-xld" secondAttribute="height" multiplier="16:9" id="ARo-DY-nB1"/>
@@ -103,7 +103,7 @@
                                     </constraints>
                                 </imageView>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="添加证书（可选）" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K4Q-WP-9Nh">
-                                    <rect key="frame" x="112.5" y="132" width="150" height="80"/>
+                                    <rect key="frame" x="112.5" y="134.5" width="150" height="80"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="80" id="ZZh-4Y-rES"/>
                                         <constraint firstAttribute="width" constant="150" id="oyy-hT-EFO"/>
@@ -118,7 +118,7 @@
                                 <constraint firstItem="jBH-NF-gsl" firstAttribute="top" secondItem="rYU-l2-pHd" secondAttribute="bottom" constant="7" id="2HC-SS-S6S"/>
                                 <constraint firstItem="cvm-Ou-jQg" firstAttribute="leading" secondItem="Hpq-9B-IT9" secondAttribute="trailing" constant="8" id="2Te-Ab-sSa"/>
                                 <constraint firstItem="K4Q-WP-9Nh" firstAttribute="centerX" secondItem="woS-Rp-xld" secondAttribute="centerX" id="2hI-0N-Ksg"/>
-                                <constraint firstItem="woS-Rp-xld" firstAttribute="top" secondItem="ff9-Mu-92y" secondAttribute="bottom" constant="7" id="4aR-gc-ScB"/>
+                                <constraint firstItem="woS-Rp-xld" firstAttribute="top" secondItem="ff9-Mu-92y" secondAttribute="bottom" constant="10" id="4aR-gc-ScB"/>
                                 <constraint firstAttribute="trailing" secondItem="cvm-Ou-jQg" secondAttribute="trailing" constant="16" id="5ad-3H-5hV"/>
                                 <constraint firstItem="cvm-Ou-jQg" firstAttribute="leading" secondItem="Hpq-9B-IT9" secondAttribute="trailing" constant="8" id="9v2-d8-Uzi"/>
                                 <constraint firstAttribute="trailing" secondItem="rYU-l2-pHd" secondAttribute="trailing" constant="16" id="I0Q-Vh-MzQ"/>
