--- a/AutoMall/ViewControllers/PersonalCenter/MailCollectionCell.xib
+++ b/AutoMall/ViewControllers/PersonalCenter/MailCollectionCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -11,41 +11,41 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="mailCollectionCell" rowHeight="76" id="KGk-i7-Jjw" customClass="MailCollectionCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="76"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="mailCollectionCell" rowHeight="90" id="KGk-i7-Jjw" customClass="MailCollectionCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="90"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="75.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="90"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholderPictureSquare" translatesAutoresizingMaskIntoConstraints="NO" id="7ON-ZD-PpV">
-                        <rect key="frame" x="16" y="8" width="60" height="60"/>
+                        <rect key="frame" x="16" y="10" width="70" height="70"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="60" id="txC-Au-2zj"/>
-                            <constraint firstAttribute="width" constant="60" id="vIx-IL-Qze"/>
+                            <constraint firstAttribute="height" constant="70" id="txC-Au-2zj"/>
+                            <constraint firstAttribute="width" constant="70" id="vIx-IL-Qze"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="【4条套装】韩泰Hankook万途仕Ventus S1noble 万途仕Ventus S1noble" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sbc-7a-aGa">
-                        <rect key="frame" x="84" y="8" width="220" height="31.5"/>
+                        <rect key="frame" x="94" y="12" width="210" height="31.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="￥500" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7zx-D7-cN1">
-                        <rect key="frame" x="84" y="52" width="37.5" height="16"/>
+                        <rect key="frame" x="94" y="61.5" width="37.5" height="16"/>
                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                         <color key="textColor" red="0.91764705879999997" green="0.12941176469999999" blue="0.1764705882" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="bottom" secondItem="7zx-D7-cN1" secondAttribute="bottom" constant="8" id="DLY-Ao-n4t"/>
+                    <constraint firstAttribute="bottom" secondItem="7zx-D7-cN1" secondAttribute="bottom" constant="12" id="DLY-Ao-n4t"/>
                     <constraint firstItem="7ON-ZD-PpV" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="EUm-eP-jSx"/>
+                    <constraint firstItem="7ON-ZD-PpV" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="Fxx-DP-AQg"/>
                     <constraint firstAttribute="trailing" secondItem="Sbc-7a-aGa" secondAttribute="trailing" constant="16" id="NFr-3c-NVv"/>
                     <constraint firstItem="Sbc-7a-aGa" firstAttribute="leading" secondItem="7ON-ZD-PpV" secondAttribute="trailing" constant="8" id="cK0-oK-dJU"/>
                     <constraint firstItem="7zx-D7-cN1" firstAttribute="leading" secondItem="7ON-ZD-PpV" secondAttribute="trailing" constant="8" id="g54-RJ-F2x"/>
-                    <constraint firstItem="7ON-ZD-PpV" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="hKg-Ba-Uo1"/>
-                    <constraint firstItem="Sbc-7a-aGa" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="v5F-GS-Dj4"/>
+                    <constraint firstItem="Sbc-7a-aGa" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="12" id="v5F-GS-Dj4"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
@@ -53,7 +53,7 @@
                 <outlet property="goodsName" destination="Sbc-7a-aGa" id="RnX-4q-Wqt"/>
                 <outlet property="goodsprice" destination="7zx-D7-cN1" id="lLp-nn-txq"/>
             </connections>
-            <point key="canvasLocation" x="-391" y="-31"/>
+            <point key="canvasLocation" x="-391" y="-24"/>
         </tableViewCell>
     </objects>
     <resources>
