--- a/AutoMall/ViewControllers/Upkeep/AutoCheckGroupCell.xib
+++ b/AutoMall/ViewControllers/Upkeep/AutoCheckGroupCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -15,7 +15,7 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="138"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="137.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="138"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="左上" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oVb-aE-TXO">
@@ -34,12 +34,13 @@
                         </constraints>
                     </view>
                     <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Qzs-rM-M3Q">
-                        <rect key="frame" x="88" y="91" width="120" height="40"/>
+                        <rect key="frame" x="16" y="91" width="240" height="40"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="120" id="ouR-hy-TLf"/>
+                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="240" id="SUf-N6-QlB"/>
                             <constraint firstAttribute="height" constant="40" id="tMq-cu-Jcy"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                        <inset key="titleEdgeInsets" minX="80" minY="0.0" maxX="0.0" maxY="0.0"/>
                         <state key="normal">
                             <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         </state>
@@ -58,7 +59,7 @@
                             <constraint firstAttribute="width" constant="72" id="E79-MY-w6f"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="textColor" red="0.2470588235" green="0.2470588235" blue="0.2470588235" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
@@ -66,11 +67,11 @@
                     <constraint firstItem="oVb-aE-TXO" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="0Yf-Nt-YB9"/>
                     <constraint firstAttribute="trailing" secondItem="8mQ-WH-vvE" secondAttribute="trailing" constant="8" id="3YU-bl-sbm"/>
                     <constraint firstAttribute="trailing" secondItem="u80-wu-KtR" secondAttribute="trailing" constant="8" id="769-xz-yd8"/>
-                    <constraint firstItem="Qzs-rM-M3Q" firstAttribute="leading" secondItem="Qdq-cb-WLS" secondAttribute="trailing" id="EWc-xW-oPQ"/>
                     <constraint firstItem="Qdq-cb-WLS" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="IVA-AP-FqV"/>
                     <constraint firstItem="u80-wu-KtR" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="Qzs-rM-M3Q" secondAttribute="trailing" constant="10" id="QZC-LR-Rdl"/>
                     <constraint firstItem="Qzs-rM-M3Q" firstAttribute="top" secondItem="8mQ-WH-vvE" secondAttribute="bottom" constant="8" id="bYp-zc-b6r"/>
                     <constraint firstItem="Qdq-cb-WLS" firstAttribute="centerY" secondItem="Qzs-rM-M3Q" secondAttribute="centerY" id="cLx-tq-MhY"/>
+                    <constraint firstItem="Qzs-rM-M3Q" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="hgs-jP-woz"/>
                     <constraint firstItem="oVb-aE-TXO" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="2" id="s3U-1j-ONK"/>
                     <constraint firstItem="8mQ-WH-vvE" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="t0s-KQ-hWn"/>
                     <constraint firstItem="u80-wu-KtR" firstAttribute="centerY" secondItem="Qzs-rM-M3Q" secondAttribute="centerY" id="tFI-Pf-m58"/>
