--- a/AutoMall/ViewControllers/PersonalCenter/EmployeeSkillListCell.xib
+++ b/AutoMall/ViewControllers/PersonalCenter/EmployeeSkillListCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -11,22 +11,22 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="employeeSkillListCell" rowHeight="80" id="KGk-i7-Jjw" customClass="EmployeeSkillListCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="80"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="employeeSkillListCell" rowHeight="90" id="KGk-i7-Jjw" customClass="EmployeeSkillListCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="90"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="79.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="90"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="default" translatesAutoresizingMaskIntoConstraints="NO" id="Sep-Na-f1p">
-                        <rect key="frame" x="8" y="9" width="60" height="60"/>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholderPictureSquare" translatesAutoresizingMaskIntoConstraints="NO" id="Sep-Na-f1p">
+                        <rect key="frame" x="8" y="10" width="70" height="70"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="60" id="Fkw-hy-pvz"/>
-                            <constraint firstAttribute="width" constant="60" id="Wiu-eH-OHs"/>
+                            <constraint firstAttribute="height" constant="70" id="Fkw-hy-pvz"/>
+                            <constraint firstAttribute="width" constant="70" id="Wiu-eH-OHs"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="认证名称" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7EM-oO-s1i">
-                        <rect key="frame" x="76" y="8" width="61.5" height="21"/>
+                        <rect key="frame" x="86" y="10" width="61.5" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="jPm-GL-flV"/>
                         </constraints>
@@ -34,19 +34,19 @@
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="认证名称" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mHR-33-P6j">
-                        <rect key="frame" x="76" y="37" width="236" height="34.5"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="认证名称内容" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mHR-33-P6j">
+                        <rect key="frame" x="86" y="39" width="226" height="40.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="textColor" red="0.2470588235" green="0.2470588235" blue="0.2470588235" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
                     <constraint firstItem="mHR-33-P6j" firstAttribute="top" secondItem="7EM-oO-s1i" secondAttribute="bottom" constant="8" id="4pM-kL-OJd"/>
-                    <constraint firstAttribute="bottom" secondItem="mHR-33-P6j" secondAttribute="bottom" constant="8" id="KHD-Sh-MrV"/>
+                    <constraint firstAttribute="bottom" secondItem="mHR-33-P6j" secondAttribute="bottom" constant="10" id="KHD-Sh-MrV"/>
                     <constraint firstItem="Sep-Na-f1p" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="KzG-zu-ZLx"/>
                     <constraint firstItem="7EM-oO-s1i" firstAttribute="leading" secondItem="Sep-Na-f1p" secondAttribute="trailing" constant="8" id="Q1h-Lh-fdb"/>
-                    <constraint firstItem="7EM-oO-s1i" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="ZWM-Ec-zJR"/>
+                    <constraint firstItem="7EM-oO-s1i" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="ZWM-Ec-zJR"/>
                     <constraint firstItem="mHR-33-P6j" firstAttribute="leading" secondItem="Sep-Na-f1p" secondAttribute="trailing" constant="8" id="aym-T9-0VI"/>
                     <constraint firstItem="Sep-Na-f1p" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="g3J-YL-UGt"/>
                     <constraint firstAttribute="trailing" secondItem="mHR-33-P6j" secondAttribute="trailing" constant="8" id="pal-c9-Ya4"/>
@@ -58,10 +58,10 @@
                 <outlet property="introduceL" destination="mHR-33-P6j" id="kyd-v6-mxB"/>
                 <outlet property="nameL" destination="7EM-oO-s1i" id="p45-GC-tyc"/>
             </connections>
-            <point key="canvasLocation" x="-145" y="1"/>
+            <point key="canvasLocation" x="-145" y="6"/>
         </tableViewCell>
     </objects>
     <resources>
-        <image name="default" width="512" height="512"/>
+        <image name="placeholderPictureSquare" width="302" height="302"/>
     </resources>
 </document>
