--- a/AutoMall/ViewControllers/PersonalCenter/MailOrderListVC.xib
+++ b/AutoMall/ViewControllers/PersonalCenter/MailOrderListVC.xib
@@ -45,7 +45,7 @@
                             </constraints>
                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
                             <state key="normal" title="待付款">
-                                <color key="titleColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="titleColor" red="0.2470588235" green="0.2470588235" blue="0.2470588235" alpha="1" colorSpace="calibratedRGB"/>
                             </state>
                             <state key="selected">
                                 <color key="titleColor" red="0.74901960779999999" green="0.21960784310000001" blue="0.28235294119999998" alpha="1" colorSpace="calibratedRGB"/>
@@ -66,7 +66,7 @@
                             <rect key="frame" x="299.5" y="7" width="59.5" height="30"/>
                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
                             <state key="normal" title="全部">
-                                <color key="titleColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="titleColor" red="0.2470588235" green="0.2470588235" blue="0.2470588235" alpha="1" colorSpace="calibratedRGB"/>
                             </state>
                             <state key="selected">
                                 <color key="titleColor" red="0.74901960779999999" green="0.21960784310000001" blue="0.28235294119999998" alpha="1" colorSpace="calibratedRGB"/>
@@ -95,7 +95,7 @@
                             <rect key="frame" x="157" y="7" width="60" height="30"/>
                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
                             <state key="normal" title="已付款">
-                                <color key="titleColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="titleColor" red="0.2470588235" green="0.2470588235" blue="0.2470588235" alpha="1" colorSpace="calibratedRGB"/>
                             </state>
                             <state key="selected">
                                 <color key="titleColor" red="0.74901960779999999" green="0.21960784310000001" blue="0.28235294119999998" alpha="1" colorSpace="calibratedRGB"/>
