--- a/AutoMall/ViewControllers/Upkeep/CheckResultCell.xib
+++ b/AutoMall/ViewControllers/Upkeep/CheckResultCell.xib
@@ -16,14 +16,14 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="220"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="219.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="220"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yag-WQ-fHB">
                         <rect key="frame" x="0.0" y="46" width="320" height="174"/>
                         <color key="backgroundColor" red="0.99607843139999996" green="0.99607843139999996" blue="0.99607843139999996" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="default" translatesAutoresizingMaskIntoConstraints="NO" id="0QG-4L-nis">
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholderPictureSquare" translatesAutoresizingMaskIntoConstraints="NO" id="0QG-4L-nis">
                         <rect key="frame" x="95" y="13" width="20" height="20"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="20" id="MxQ-eO-YId"/>
@@ -345,8 +345,8 @@
         </tableViewCell>
     </objects>
     <resources>
-        <image name="default" width="512" height="512"/>
         <image name="jaince" width="34" height="34"/>
+        <image name="placeholderPictureSquare" width="302" height="302"/>
         <image name="yichang" width="34" height="34"/>
     </resources>
 </document>
